--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Gunicorn instance to server 2-hbnb
+Description=Gunicorn service to run 2-hbnb application
 After=network.target
 
 [Service]
 User=ubuntu
 Group=www-data
-WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
-ExecStart=gunicorn --bind 0.0.0.0:5003 --workers=3 --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log web_dynamic.2-hbnb:app
+WorkingDirectory=/home/ubuntu/HBNB_v4
+ExecStart=/usr/local/bin/gunicorn --bind 0.0.0.0:5003 --workers=4 --access-logfile /var/log/2hbnb-access.log --error-logfile /var/log/2hbnb-error.log web_dynamic.2_hbnb:app
 
 [Install]
 WantedBy=multi-user.target
